samples/_failures_safe/1761320095_a32142_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_357cb92d.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_357cb92d.c:143:25: error: missing terminating " character
  143 |         fprintf(stderr, "Invalid operation
      |                         ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_357cb92d.c:143:9: error: expected expression at end of input
  143 |         fprintf(stderr, "Invalid operation
      |         ^~~~~~~
./samples/SAFE/__tmp_357cb92d.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_357cb92d.c:143:9: error: expected declaration or statement at end of input
